# chessbicos

./: .env  Cargo.toml  Dockerfile  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
api/: Cargo.toml  build.rs
api/proto/: auth.proto  chessgame.proto
api/src/: lib.rs
api/src/auth/: mod.rs  service.rs
api/src/chess/: board.rs  mod.rs  service.rs
api/src/db/: connector.rs
entity/: Cargo.toml
entity/src/entities/: game.rs  mod.rs  prelude.rs  time_control.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  main.rs
migration/src/migrations/: m20240414_000001_create_users_table.rs  m20240414_000002_create_time_control_table.rs  m20240414_000003_create_game_table.rs  mod.rs
proto/: chess.proto  chess_server.proto  store.proto
service/: Cargo.toml
service/src/users/: mutation.rs  query.rs
src/: chess.rs  cli.rs  main.rs  server.rs
src/chess/: board.rs  chess_move.rs  game.rs  pieces.rs  square.rs
src/db/: Dockerfile  connector.rs  init.sql
