[package]
name = "chessbicos"
version = "0.1.0"
edition = "2021"

[[bin]] 
name = "chessbicos-server"
path = "src/main.rs"

[workspace]
members = [".", "api", "service", "entity", "migration"]

[dependencies]
api = { path = "api" }
tonic = "0.11"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"


[build-dependencies]
tonic-build = "0.11"