[package]
name = "api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
service = { path = "../service" }
entity = { path = "../entity" }
migration = { path = "../migration" }
tonic = "0.11"
tonic-reflection = "0.11.0"
prost = "0.12"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] } 
serde = "1.0"

[lib]
path = "./src/lib.rs"

[build-dependencies]
tonic-build = "0.11"
